src/assets/scss/app.scss
/* ... */
.menu.vertical{
	li{
		font-weight: bold;
		label{
			padding-right: $global-padding;
			padding-left: $global-padding;
			padding-top: .5rem;
			padding-bottom: .5rem;
			color: $white;
			text-transform: uppercase;
			font-weight: bold;
		}				
		ul{
			margin-left: 0;
			li{				
				a{	
					padding-left: .5rem;
				}
				a:before {
				    content: "\f148";
				    font-family: FontAwesome;
				    text-decoration: inherit;
				    padding-right: .15rem;
				    padding-top: .0rem;
				    padding-left: .0rem;
				    margin-left: .5rem;
				    margin-right: .5rem;
				    display: block;
				    float: left;
				    -ms-transform: rotate(90deg); /* IE 9 */
				    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
				    transform: rotate(90deg);
				}
				list-style: none;				
			}					
		}
	}
}
.menu.vertical.submenu{
	z-index: 100;
}

//helper classes----------------

.text-decoration-none{
	text-decoration: none;
}

.wtamu{
	font-family: Georgia;
	text-transform: uppercase;
}

h1.smaller{font-size: 1.4rem}
h2.smaller{font-size: 1.2rem}
h3.smaller{font-size: 1.2rem}
.smaller{font-size: .8rem}

.relative{
	position: relative;
}
.overlay {
    position: absolute;
    top: 0;
    left: 0;  
    filter: brightness(100%);
}
.padding-top{
    padding-top: 1rem;
}

.uppercase{
	text-transform: uppercase
}

.padding-bottom{
    padding-bottom: 2rem !important;
}
.padding{
	padding-top: 1rem;
	&.grid-x{
		padding-top: 3rem;
    	padding-bottom: 2.25rem;
	} 
}
.small-text-center{
	text-align: center;
	@include breakpoint(medium up){
		text-align: inherit;
	}
}
.padding-top-no{
    padding-top: 0 !important;
}
.padding-bottom-no{
    padding-bottom: 0 !important;
}

//section scss----------------

.top-bar{
	padding-left: 0;
	padding-right: 0;
	z-index: 100;
	.wtamu {
		font-family: Georgia;
		text-transform: uppercase;
		letter-spacing: .15rem;
		margin-bottom: 0;
		font-size: 20px;
		line-height: .5rem;
	}
	.top-bar-right, .top-bar-left{
		web-kit-flex: none;
		flex: none;
	}
	.logo-wrapper {
	    position: relative; 
	    margin-left: auto;
	    margin-right: auto;
	    .logo {
	    	height: 40px;
		    width: 40px;
		    margin-left: -20px;	
		    top: -20px;
		    overflow: hidden;
		    position: absolute;	
		    vertical-align: middle;
		    @include breakpoint(large up){
		    	margin-left: -124px;	
		    }
		    &.large{		    	
		    	@include breakpoint(large up){
			    	border-radius: 40px;
					width: 80px;
					height: 80px;
					top: -20px;
					margin-left: -111px;	
				}
		    }
	    	a:focus, a:hover, a:active{
				imgtheresisabuginsafariandchrome{
					filter: brightness(80%);
				}
			}		    	    
		}		
	}
	.menu{	
		i.fa{
			font-size: 1.3rem;
			font-weight: regular;
			@include breakpoint(large up){
				font-size: inherit;
			}
		}
	}
}

.banner {
	.swiper-slide h2{
	    text-align: center;
	    padding-top: 20px;
	    padding-bottom: 20px;
	    font-weight: bold;
	    line-height: 1;
	}
	@include breakpoint(large up){
		margin-top: 0px;	
	}
	.swiper-container{
		max-width: 1280px;
	}
	a{
		text-decoration: none;
		&:focus, &:hover, &:active{
			.overlay{
				filter: brightness(80%);
			}
		}		
	}
}

.swiper-container {    	
	.swiper-slide{
		img{
			width: 100%;
		}
		height: auto;		
	}	
	.swiper-button-next,
	.swiper-button-prev{
	    background-image: none !important;
	    font-size: 70px;
	    margin-top: -60px !important;
	    text-shadow: 3px 3px 4px #581818;
	    opacity: 0;
	    -o-transition:.3s;
	   	-ms-transition:.3s;
	   	-moz-transition:.3s;
	   	-webkit-transition:.3s;
	   	transition:.3s;
	}
	&:hover .swiper-button-next,
	&:hover .swiper-button-prev{	    
	    opacity: .8;	    
	}
	.swiper-button-disabled{
	    display: none;
	}
	&:hover .swiper-button-disabled{
		display: block;
	    opacity: .2;
	}
	.swiper-button-next:before, .swiper-button-prev:before{
	    background-image: none !important;
	    color: $white;
	    content: "\f105";
	    font-family: FontAwesome;
	    font-style: normal;
	    font-weight: normal;
	    text-decoration: inherit;
	}
	.swiper-button-prev:before{	    
	    content: "\f104";
	}
	.swiper-scrollbar{
	    display: none;
	}
	.swiper-pagination-bullet-active {
	    opacity: .9 !important;
	}
	> .swiper-pagination-bullets {
	    bottom: -6px;	    
	    .swiper-pagination-bullet{
	    	width: 12px;
	    	height: 12px;
	    	&:only-child{
	    		display: none;
	    	}
	    }
	}
}

.events{	
	.date{
		float: left;		
		width: 8rem;
		text-align: center;
		margin-right: 1rem;
		> *
		{
			margin-top: .25rem;
			margin-bottom: .25rem;
		}
	}
	.caption{
		padding-top: 1.65rem;
		padding-bottom: 1rem;
		height: 4.5rem;
		p{
			text-overflow: ellipsis;
			overflow: hidden;
			white-space: nowrap;
		}		
	}
}

.social{
	span.fa{
		font-size: 2rem;	
		padding: 1rem;	
		width: 4rem;
	}
	.column-block {
	    margin-bottom: 1rem;
	}
	&.contact{
		border-bottom: 1px solid $white;		
	}
}

.news{
	.swiper-container{
		img{
			background-position: center !important;
			background-repeat: no-repeat !important;
			background-size: contain !important;
			background-color: scale-color($primary-color, $lightness: -10%) !important;
			background-image: url("../img/base/buffalo.png");
		}
	}
}

//background scss----------------

.back-old {
    background-image: url("../img/base/back-old.jpg");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;    
}

.back-mall {
    background-image: url("../img/base/back-mall.jpg");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;    
}

//auto icons------------------------

a[href^="tel:"]::before {
    content: "\f095";
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    text-decoration: inherit;
    padding-right: .25rem;
}
/* ... */

